# RailWayMan-Firmware

./: .gitignore  Makefile
.circleci/: Dockerfile  config.yml  upload_tarball.sh
cmake/: rpi-armv6-gnueabihf.cmake
notes/: board pinout.txt
src/: Makefile
src/common/: Makefile  address_finder.c  address_finder.h  i2c_defs.h  revision.h  twi.c  twi.h
src/common/test/: Makefile  test_twi.c
src/controller/: Makefile  adc.c  adc.h  led_output.c  led_output.h  main.c  main.h  registers.h  timeout.c  timeout.h
src/lighttest/: Makefile  main.c
src/section_driver/: Makefile  main.c  main.h  pwm.c  registers.h  trackcircuit.c  trackcircuit.h
test-clients/: CMakeLists.txt
test-clients/cmake/: rpi-armv6-gnueabihf.cmake
test-clients/controller-common/: i2c.c  i2c.h
test-clients/test-controller/: CMakeLists.txt  Makefile  Makefile.old  controller-funcs.c  controller-funcs.h  test-controller-funcs  test-controller-funcs.c  test-controller.c  test_controller.h
test-clients/test-controller-lights/: CMakeLists.txt  main.c  main.h  test-controller-lights  virtualregisters.h
test-clients/test-tracksection/: CMakeLists.txt  test-convert-signed-speed.c  test-tracksection  test-tracksection.c  test-tracksection.h  tracksection-functions.c  tracksection-functions.h
test-clients/test1/: CMakeLists.txt  Makefile  test1  test1.c
